# oskag

./: .env.example  .gitattributes  .gitignore  LICENSE  OSKAG-设计赛道提交文档.md  README.md  USAGE.md  check_traces.py  pyproject.toml
oskag/: __init__.py  __main__.py  agent.py  cache.py  cli.py  config.py  llm.py  logging_setup.py
oskag/describe/: _modules.py  _ref_lines_fix.py  pipeline.py  prompts.py  token_budget.py
oskag/eval/: __init__.py  citation_validator.py
oskag/facts/: __init__.py  _syscall_tables.py  boot.py  call_graph.py  cargo.py  profiles.py  project_type.py  repomap.py  scan.py  signatures.py  syscalls.py
oskag/pipelines/: __init__.py  _diff.py  compare.py
oskag/prompts/: call_graph.j2  compare_semantic.j2  describe_module.j2  free_modules.j2  novelty.j2  synthesize.j2  verifier.j2
oskag/render/: compare_markdown.py  markdown.py
oskag/tools/: __init__.py  _subprocess.py  fs.py  loc.py  ts.py
