[project]
name = "oskag"
version = "0.0.1"
description = "面向操作系统内核仓库的代码分析 CLI 工具，生成带代码引用的中文描述与对比文档"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "agent", "deepseek", "operating-system", "kernel-analysis", "rust", "tree-sitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Operating System Kernels",
]

dependencies = [
    "openai>=1.50,<2.0",
    "typer>=0.12.5",
    "rich>=13.7",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "jinja2>=3.1.4",
    "structlog>=24.4",
    "jsonschema>=4.22",
    # 0.10.x 捆绑了 300+ 语言 parser；1.x 改为运行时下载，离线环境会失败，故锁定此系列
    "tree-sitter-language-pack~=0.10.0",
    "toml>=0.10.2",          # cargo metadata 不可用时回退解析 Cargo.toml
    "grep_ast>=0.3",         # 构建仓库地图
    "diskcache>=5.6.3",
    "networkx>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
oskag = "oskag.cli:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oskag"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
